# packtrack-v2

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: Caddyfile  backup.sh  deploy.sh  packtrack-backup.service  packtrack-backup.timer  packtrack.service  restore.sh
docs/: CURRENT_PHASE_STATUS.md  DEPLOYMENT.md  FINISH_PLAN.md  P1_5_MANUAL_CLEANUP.md  PACKTRACK_API_SURFACE.md  PACKTRACK_BUILD_QUEUE.md  PACKTRACK_CONFIDENCE_MODEL.md  PACKTRACK_LUMA_BOUNDARY.md  PACKTRACK_LUMA_CONTRACT.md  PACKTRACK_SEPARATION_P0_CHANGES.md  PACKTRACK_ZOHO_INTEGRATION_RECEIVES.md  RECEIVING_VNEXT_CANARY_CLEANUP.md  RUNBOOK.md  RUNBOOK_DEPLOY.md  RUNBOOK_RECEIVING_VNEXT_CANARY.md  RUNBOOK_RECEIVING_VNEXT_OPERATOR.md  ZOHO_API_GATEWAY_PLAN.md
migrations/: env.py
packtrack/: auth.py  config.py  db.py  deps.py  login.html  main.py  models.py  notifications.py  scheduler.py  telegram.py  wipe.py  zoho.py
scripts/: audit_material_codes.py  audit_packtrack_luma_readiness.py  backfill_luma_packaging_material_zoho_ids.py  seed_demo.py  seed_fat_po.py  seed_owner.py  smoke.sh  smoke_test.sh  sync_items_via_gateway.py  wipe_data.py
static/: styles.src.css
tests/: conftest.py  test_alembic_chain.py  test_backfill_script.py  test_consumption.py  test_healthz_config.py  test_inventory_cf_product_line_edit.py  test_inventory_detail.py  test_inventory_grouping.py  test_inventory_item_detail_extended.py  test_inventory_masterdata_editor.py  test_inventory_pagination.py  test_inventory_reorder.py  test_luma_consumption_edges.py  test_luma_receipt_push.py  test_luma_registration.py  test_material_audit.py  test_oidc_state.py  test_po_routes.py  test_receive_vnext_stage1.py  test_receive_vnext_stage2_finalize.py  test_receiving_idempotency.py  test_receiving_rules.py  test_v2_10_0_adjustment_zoho_sync.py  test_v2_11_0_stock_ownership.py  test_v2_13_0_launch_readiness.py  test_v2_14_0_cycle_count.py  test_v2_15_0_receiving_po_visibility.py  test_v2_16_0_cycle_count_form_completeness.py  test_v2_16_2_input_affordance.py  test_v2_16_3_retry_safety.py  test_v2_17_0_inventory_reconciliation.py  test_v2_17_1_reconciliation_guidance.py  test_v2_18_0_cycle_count_sheet.py  test_v2_6_2_polish.py  test_v2_7_2_mark_test.py  test_v2_7_4_polish.py  (+8 more)
(+113 files in other folders)
