[project]
name = "packtrack"
version = "2.1.1"
description = "Zoho-synced PO workflow for packaging sourced from China"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118",
    "sqlmodel>=0.0.27",
    "psycopg[binary]>=3.2",
    "alembic>=1.16",
    "pydantic-settings>=2.10",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2",
    "passlib[argon2]>=1.7.4",
    "httpx>=0.28",
    "apscheduler>=3.11",
    "jinja2>=3.1.4",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13",
    "pytest>=8.4",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packtrack"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]
