[project]
name = "packtrack"
version = "2.9.0"
description = "Zoho-synced PO workflow for packaging sourced from China"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118",
    "sqlmodel>=0.0.27",
    "psycopg[binary]>=3.2",
    "alembic>=1.16",
    "pydantic-settings>=2.10",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2",
    "passlib[argon2]>=1.7.4",
    "httpx>=0.28",
    "apscheduler>=3.11",
    "jinja2>=3.1.4",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13",
    "pytest>=8.4",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packtrack"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "B008",   # FastAPI dependency defaults intentionally call Depends/Form/File.
    "E501",   # Templates and long operator messages are more readable unwrapped.
    "N818",   # Domain exception names predate the lint rule.
    "RUF002", # Operator-facing copy uses typographic symbols in a few places.
    "RUF003",
]
